--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
       <a href="">WebStudio</a>
       <nav>
-      <ul>
-        <li><a href="">Agencja</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Kontakt</a></li>
-      </ul>
+        <ul>
+          <li><a href="">Agencja</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Kontakt</a></li>
+        </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
-
+    </header>
   </body>
 </html>
