dodanie pierwszej sekcji

--- a/index.html
+++ b/index.html
@@ -19,5 +19,34 @@
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
+    <main>
+      <section>
+        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button>Zamów Usługę</button>
+      </section>
+      <section>
+        <article>
+          <h4>LOREM IPSIUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </article>
+        <article>
+          <h4>LOREM IPSIUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </article>
+        <article>
+          <h4>LOREM IPSIUM</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
