--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
           </p>
         </article>
       </section>
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <ul>
+          <li>
+            <img src="images/11.jpg" alt="box 1" width="370" height="294" />
+          </li>
+          <li>
+            <img src="images/12.jpg" alt="box 2" width="370" height="294" />
+          </li>
+          <li>
+            <img src="images/13.jpg" alt="box 3" width="370" height="294" />
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
