--- a/index.html
+++ b/index.html
@@ -61,6 +61,47 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <figure>
+              <img src="images/1.jpg" alt="John Doe" width="270" height="260" />
+              <figcaption>
+                John Doe<br />
+                Product Designer
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/2.jpg" alt="John Doe" width="270" height="260" />
+              <figcaption>
+                John Doe<br />
+                Frontend Developer
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/3.jpg" alt="John Doe" width="270" height="260" />
+              <figcaption>
+                John Doe<br />
+                Marketing
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/4.jpg" alt="John Doe" width="270" height="260" />
+              <figcaption>
+                John Doe<br />
+                UI Designer
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
