--- a/index.html
+++ b/index.html
@@ -103,5 +103,13 @@
         </ul>
       </section>
     </main>
+    <footer>
+      WebStudio
+      <address>
+        m. Warszawa, Aleje Jerozolimskie 21<br />
+        info@example.com<br />
+        +48 111 111 111
+      </address>
+    </footer>
   </body>
 </html>
