poprawienie drugiej sekcji

--- a/index.html
+++ b/index.html
@@ -25,27 +25,26 @@
         <button>Zamów Usługę</button>
       </section>
       <section>
-        <article>
-          <h4>LOREM IPSIUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </article>
-        <article>
-          <h4>LOREM IPSIUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </article>
-        <article>
-          <h4>LOREM IPSIUM</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </article>
+        <ul>
+          <li>
+            LOREM IPSIUM<br />
+            Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li>
+            LOREM IPSIUM<br />
+            Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li>
+            LOREM IPSIUM<br />
+            Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Czym się zajmujemy</h2>
